--- a/AREYOUCEREAL.github.io/_config.yml
+++ b/AREYOUCEREAL.github.io/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
-title: Jekyll and Hi
+title: Oh My Blog 
 email: wendi@createsalesandmarketing.com
 description: > # this means to ignore newlines until "baseurl:"
-  A little site dedicated to my time at MakerSquare and Learning Jekyll.
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ musings, rants and raves by wendi speciale
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: WendiSpeciale
